Fixes row's overflow, adds yellow background

--- a/css/responsive.css
+++ b/css/responsive.css
@@ -1,3 +1,11 @@
+@media screen and (max-width: 992px){
+  .row{
+    width:100%;
+  }
+}
+
+
+
 @media screen and (max-width: 420px){
   .row, .container{
     width: auto;
@@ -11,6 +19,15 @@
   #steps .row>.left, #steps .row>.central, #steps .row>.right{
     width:auto;
     margin-bottom: 80px;
+  }
+
+  #lezioni .row{
+    margin-top:0;
+  }
+
+
+  #lezioni, #why{
+    background-color:rgb(238, 232, 180);
   }
 
 }
